--- a/templates/__partials/footer.html.twig
+++ b/templates/__partials/footer.html.twig
@@ -54,23 +54,22 @@
 			<ul>
 				<li>
 					<span>
-						<i class="bi bi-facebook"></i>
+						<i class="bi bi-facebook"><a href="https://www.facebook.com/"></a></i>
 					</span>
 				</li>
 				<li>
 					<span>
-						<i class="bi bi-instagram"></i>
+						<i class="bi bi-instagram"><a href="https://www.instagram.com/"></a></i>
 					</span>
 				</li>
 				<li>
 					<span>
-						<i class="bi bi-snapchat"></i>
+						<i class="bi bi-snapchat"><a href=""></a></i>
 					</span>
 				</li>
 				<li>
 					<span>
-						<i class="bi bi-tiktok"></i>
-					</span>
+						<i class="bi bi-tiktok"><a href="https://www.asos.com/fr/homme/"></a></i>
 				</li>
 
 			</ul>
