--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,22 +11,14 @@
 
 
 <div class="my-5">
-
 	<h3 class="text-center">
 		<strong>Découvrez nos derniers produits</strong>
 	</h3>
 </div>
-
-
 <div class="col-12">
 	<div class="row">
-
 		{% for product in products %}
-
-
 		<div class="col-md-6 col-lg-5 col-xl-3 p-3">
-
-
 			<div class="card h-100">
 				{% if product.createdAt|date('Y-m-d') >= 'now'|date_modify('-20 days')|date('Y-m-d') %}
 				<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Nouveauté
@@ -40,31 +32,12 @@
 						<h5 class="fw-bolder">{{ product.name }}</h5>
 						<h6 id="text-des">{{ product.description|u.truncate(70,'...', false) }}</h6>
 						{% if product.reduction == 0 %}
-
-						<span class="">{{product.price|number_format(2, ',', ' ')}}
-							€
-
-
-						</span>
-
-
+						<span class="">{{product.price|number_format(2, ',', ' ')}} €</span>
 						{% else %}
 						<span class="text-decoration-line-through text-danger">{{product.price|number_format(2, ',', '
-							')}}
-
-							€
-
-
-						</span>
-
-
-						<span>
-							{{product.priceSolde|number_format(2, ',', ' ')}}
-							€
-						</span>
-
+							')}} €</span>
+						<span>{{product.priceSolde|number_format(2, ',', ' ')}} €</span>
 						{% endif %}
-
 					</div>
 				</div>
 				<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
@@ -73,19 +46,13 @@
 							class="card-link btn btn-outline-primary">Détails</a>
 						<a href="{{path('cart_add', {'id':product.id})}}"
 							class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
-
-							<i class="bi bi-cart-plus-fill"></i>
-						</a>
-
+							<i class="bi bi-cart-plus-fill"></i></a>
 						<a href="{{ path('favorite_add', {'id': product.id }) }}" class="card-link btn btn-danger"> <i
 								class="bi bi-heart-fill"></i></a>
-
-
 					</div>
 				</div>
 			</div>
 		</div>
-
 		{% endfor %}
 	</div>
 </div>
