--- a/templates/payment/index.html.twig
+++ b/templates/payment/index.html.twig
@@ -6,7 +6,7 @@
 {% block title %}paiement
 {% endblock %}
 
-{% block h1 %}Paiement
+{% block h1 %}Paiement...
 {% endblock %}
 
 {% block body %}{% endblock %}
