--- a/templates/account/orders.html.twig
+++ b/templates/account/orders.html.twig
@@ -2,13 +2,14 @@
 
 {% block title %}Mes commandes{% endblock %}
 
-{% block body %}
-<div class="text-center my-4">
-    <h1>Mes commandes
-        <p>C'est dans cet espace que vous allez pouvoir gérer toutes vos commandes.</p>
-    </h1>
+{% block h1 %}Mes commandes{% endblock %}
 
-</div>
+{% block body %}
+
+
+<p>C'est dans cet espace que vous allez pouvoir gérer toutes vos commandes.</p>
+
+
 
 {% if orders|length == 0 %}
 <hr>
