--- a/templates/email/order_confirmation.html.twig
+++ b/templates/email/order_confirmation.html.twig
@@ -12,7 +12,10 @@
     <tbody>
         {% for orderDetail in order.orderDetails %}
         <tr>
-            <td>{{ orderDetail.productId.name }}</td>
+            <td><img src="{{ asset('img/product/' ~ orderDetail.productId.image1) }}"
+                    alt="image principale {{ orderDetail.productId.image1 }}">
+                {{ orderDetail.productId.name }}
+            </td>
             <td>{{ orderDetail.quantity }}</td>
         </tr>
         {% endfor %}
@@ -22,14 +25,15 @@
 
 <ul>
     <li>Référence : {{ order.reference }}</li>
-    <li>Montant : {{ order.amount }} €</li>
+    <li>Montant : {{ order.amount|number_format(2, ',', '.') }} €</li>
+    <li>Transporteur : {{ order.carrier.name }}</li>
     <li>Adresse de facturation :
         <ul>
             <li>{{ order.user.firstName ~ ' ' ~ order.user.lastName|upper }}</li>
             <li>{{ order.billingAddress.address }}</li>
             {{ order.billingAddress.additional != null ? '<li>' ~ order.billingAddress.additional ~ '</li>' : null }}
-            <li>{{ order.billingAddress.zip ~ ' ' ~ order.billingAddress.city }}</li>
-            <li>{{ order.billingAddress.country }}</li>
+            <li>{{ order.billingAddress.zip ~ ' ' ~ order.billingAddress.city ~ ' ' ~ order.billingAddress.country }}
+            </li>
         </ul>
     </li>
     <li>Adresse de livraison :
@@ -37,8 +41,8 @@
             <li>{{ order.user.firstName ~ ' ' ~ order.user.lastName|upper }}</li>
             <li>{{ order.deliveryAddress.address }}</li>
             {{ order.deliveryAddress.additional != null ? '<li>' ~ order.deliveryAddress.additional ~ '</li>' : null }}
-            <li>{{ order.deliveryAddress.zip ~ ' ' ~ order.deliveryAddress.city }}</li>
-            <li>{{ order.deliveryAddress.country }}</li>
+            <li>{{ order.deliveryAddress.zip ~ ' ' ~ order.deliveryAddress.city ~ ' ' ~ order.deliveryAddress.country}}
+            </li>
         </ul>
     </li>
 </ul>
