--- a/templates/product/productShow.html.twig
+++ b/templates/product/productShow.html.twig
@@ -37,6 +37,7 @@ Details du produit
 
 			</div>
 			<p>{{product.abstract}}</p>
+
 			<div class="d-flex">
 				<input class="form-control text-center me-3" id="inputQuantity" type="num" value="{{product.quantity}}"
 					style="max-width: 3rem" />
@@ -44,6 +45,7 @@ Details du produit
 					<a href="{{path('cart_add', {'id':product.id})}}"
 						class="card-link btn btn-{{ product.quantity != 0 ? 'success' : 'danger disabled' }}">
 						<i class="bi bi-cart-plus-fill"></i> Acheter
+
 					</a>
 				</button>
 			</div>
@@ -64,11 +66,10 @@ Details du produit
 		<div class="col-md-6 col-lg-4 col-xl-3 p-3">
 
 			<div class="card h-100">
-				{% if product.createdAt|date('Y-m-d') >= 'now'|date_modify('-20
-				days')|date('Y-m-d') %}
-				<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">
-					Nouveauté</div> {% endif
-				%}
+				{% if product.createdAt|date('Y-m-d') >= 'now'|date_modify('-20 days')|date('Y-m-d') %}
+				<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Nouveauté
+				</div>
+				{% endif %}
 
 				<img class="card-img-top" src="{{ asset('img/product/' ~ product.image1) }}" alt="..." />
 
