--- a/templates/product/sexe.html.twig
+++ b/templates/product/sexe.html.twig
@@ -4,15 +4,12 @@
 
 {% endblock %}
 {% block h1 %}
-{% for sex in sexe %}
-{% if sex == sex.femme %}
-Vos produits pour femme
-{% endif %}
-{% endfor %}
-
+VOS PRODUITS POUR {{sexe.name|upper}}
 {% endblock %}
 
 {% block body %}
+
+
 
 <div class="col-12 my-5 pt-1">
 	<div class="row">
@@ -23,8 +20,10 @@ Vos produits pour femme
 
 			<div class="card h-100">
 
+				{% if product.createdAt|date('Y-m-d') >= 'now'|date_modify('-20 days')|date('Y-m-d') %}
 				<div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Nouveauté
 				</div>
+				{% endif %}
 				<img class="card-img-top" src="{{ asset('img/product/' ~ product.image1) }}"
 					alt="produit de {{ product.name }}" />
 
