--- a/templates/__partials/header.html.twig
+++ b/templates/__partials/header.html.twig
@@ -7,7 +7,7 @@
 
 <nav id="header2" class="navbar navbar-expand-lg bg-secondary navbar-dark ">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{{ path('home') }}"><img src="{#logo#}" alt=""></a>
+		<a class="navbar-brand" href="{{ path('home') }}"><img src="{{ asset('img/logo/logo1.png') }}" alt=""></a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
 			aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
