--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,9 +11,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="{% block description %}{% endblock %}">
 
-	<title>VDV
-		{% block title %}{% endblock %}
-	</title>
+	<title>VDV {% block title %}{% endblock %}</title>
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ asset('img/favicon/apple-touch-icon.png') }}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ asset('img/favicon/favicon-32x32.png') }}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ asset('img/favicon/favicon-16x16.png') }}">
+
+
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -45,13 +48,14 @@
 	<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-inner">
 			<div class="carousel-item active" data-bs-interval="2500">
-				<img src="{{ asset('img/pexels-cottonbro-4004161.jpg') }}" class="d-block w-100" alt="...">
+				<img src="{{ asset('img/acceuil/pexels-cottonbro-4004161.jpg') }}" class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item active" data-bs-interval="2500">
-				<img src="{{ asset('img/pexels-kampus-production-8201163.jpg') }}" class="d-block w-100" alt="...">
+				<img src="{{ asset('img/acceuil/pexels-kampus-production-8201163.jpg') }}" class="d-block w-100"
+					alt="...">
 			</div>
 			<div class="carousel-item active" data-bs-interval="2500">
-				<img src="{{ asset('img/pexels-angela-roma-7319301.jpg') }}" class="d-block w-100" alt="...">
+				<img src="{{ asset('img/acceuil/pexels-angela-roma-7319301.jpg') }}" class="d-block w-100" alt="...">
 			</div>
 		</div>
 
