--- a/templates/payment/success.html.twig
+++ b/templates/payment/success.html.twig
@@ -14,7 +14,7 @@
 <div class="col-6 offset-3">
 	<p>Le paiement a été accepté et nous vous en remercions.</p>
 	<p>Vous pouvez télécharger votre facture en cliquant sur le lien suivant :
-		<a href="#">télécharger ma facture</a>.
+		<a href="{{ path('receipt_pdf', {'reference' : order.reference}) }}">télécharger ma facture</a>.
 	</p>
 	<p>Pour toute demande concernant votre commande, vous pouvez nous contacter via le
 		<a href="{{ path('contact') }}">formulaire de contact</a>.
