--- a/templates/email/order_confirmation.html.twig
+++ b/templates/email/order_confirmation.html.twig
@@ -16,7 +16,7 @@
         <tr>
             <td><img style="margin: 0; border: 0; padding: 0; display: block;"
                     src="{{email.image('@images/product/' ~ orderDetail.productId.image1) }}" width="120" height="120"
-                    alt="image principale {{ orderDetail.productId.image1 }}"> #}
+                    alt="image principale {{ orderDetail.productId.image1 }}">
                 {{ orderDetail.productId.name }}
             </td>
             <td>{{ orderDetail.quantity }}</td>
