--- a/templates/product/sexe.html.twig
+++ b/templates/product/sexe.html.twig
@@ -1,7 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
+{{sexe.name|upper}}
+{% endblock %}
 
+{% block stylesheets %}
+<link rel="stylesheet" href="{{ asset('css/pagination.css') }}">
 {% endblock %}
 {% block h1 %}
 VOS PRODUITS POUR {{sexe.name|upper}}
@@ -11,11 +15,11 @@ VOS PRODUITS POUR {{sexe.name|upper}}
 
 
 
-<div class="col-12 my-5 pt-1">
+<div class="col-12">
 	<div class="row">
 		{% for product in products %}
 
-		<div class="col-md-6 col-lg-4 col-xl-3 p-3">
+		<div class="col-md-6 col-lg-4 col-xl-3">
 
 
 			<div class="card h-100">
@@ -82,5 +86,10 @@ VOS PRODUITS POUR {{sexe.name|upper}}
 	</div>
 </div>
 
+<div class="pagination-container">
+	{% do products.setPageRange(1) %}
+	{{ knp_pagination_render(products, '__partials/pagination.html.twig') }}
+
+</div>
 
 {% endblock %}
