--- a/templates/receipt/orderReceipt.html.twig
+++ b/templates/receipt/orderReceipt.html.twig
@@ -4,7 +4,7 @@
 <strong>Commande passée le :</strong> {{ order.createdAt|date('d/m/Y') }}<br />
 <strong>Référence de ma commande :</strong> <small>{{ order.reference }}</small><br />
 <strong>{{ order.deliveryAddress.address }}</strong><br />
-<strong> {{ order.deliveryAddress.additional != null ? '<li>' ~ order.deliveryAddress.additional ~ '</li>' : null
+<strong> {{ order.deliveryAddress.additional != null ? ~ order.deliveryAddress.additional : null
     }}</strong><br />
 <strong>{{ order.deliveryAddress.zip ~ ' ' ~ order.deliveryAddress.city ~ ' ' ~ order.deliveryAddress.country}}</strong>
 
